@@ -98,8 +98,9 @@ enum {
 	ITVC_ENT_REF,
 	ITVC_ENT_STATUS,
 	ITVC_LED_ID,
+	ITVC_OPE_TEMPLATE,
 	ITVC_STLMT_NUMBER,
-	ITVC_TYPE
+	ITVC_TYPE,
 };
 
 
