@@ -31,6 +31,7 @@
    - ofaDossierManager: gives a title to the dialog.
    - ofaDossierOpen: gives a title to the dialog.
    - ofaDossierOpen: shows all dossier, even if only archived.
+   - ofaEntryPage: display operation template (todo #1008).
    - ofaFileFormat: now haves a string delimiter configuration option (todo #1028).
    - ofaGuidedInputBin: account selection icon is set inside of the entry.
    - ofaIPrintable: have an information message after successful printing (todo #1015).
